# ata-db-models

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: on-merge-to-main.yaml  on-pull-request.yaml
alembic/: env.py
alembic/versions/: 124a23d47171_remove_and_add_columns_for_event_table.py  575b853b004c_add_prescription.py  73bdc21caa16_add_id_and_site_name.py  792137e0de98_add_usergroup_table.py  7d4e539803ae_add_query_fragment_url_fields.py  d79e4cdec772_add_page_url_and_page_urlhost.py
ata_db_models/: helpers.py  models.py
ata_db_models/db_init_stages/: _3_add_api.py
ata_models/: init_db.py
src/: helpers.py  init_db.py  models.py
tests/: test_helpers.py  test_init_db.py  test_init_methods.py  test_models.py
