[tool.poetry]
name = "ata_models"
version = "0.0.1"
description = "Database models and migrations for Automating the Ask."
authors = ["Raaid Arshad <raaid@protonmail.com>"]
repository = "https://github.com/LocalAtBrown/ata-models"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.8"
alembic = "1.8.1"
psycopg2 = "2.9.5"
sqlmodel = "0.0.8"


[tool.poetry.dev-dependencies]
mypy = "^0.961"
pre-commit = "^2.19.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = '\.pyi?$'
exclude = '''
(
  /(                        # exclude a few common directories in the
    \.git                   # root of the project
    | \.pytest_cache
    | python-venv
    | \.venv
    | build
    | dist
    | \.tox
  ))
'''

[tool.isort]
profile = "black"

[tool.mypy]
# use the strict option since this a new project
strict = "True"
files = "src/models.py"
exclude = [
    '\.venv',
    'tests'
]
